app/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: api
