app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 35.221.193.223
    # networking.gke.io/managed-certificates: web-certificate
spec:

  ingressClassName: nginx
  defaultBackend :
    service: 
      name: api
      # servicePort: 80
      port:
        number: 80
